 * #877 (centered whitenoise limitation)
 * #878 (Viewer does not take into account labels in Contour)
 * #879 (Incomplete arguments in FunctionalChaosRandomVector docstrings)
 * #882 (RandomMixture segfaults with Dirac)
 * #883 (VisualTest.DrawHistogram should rely on Histogram.drawPDF)
 * #887 (Bogus PDF evaluation in RandomMixture with mix of continuous/discrete variables)

== 1.8 release (2016-11-18) == #release-1.8

=== Library ===

==== Major changes ====
 * Changed the default orthonormalization algorithm of StandardDistributionPolynomialFactory from GramSchmidtAlgorithm to AdaptiveStieltjesAlgorithm
 * New api for sensitivity analysis
 * New methods to compute confidence regions in Distribution

==== New classes ====
 * SubsetSampling
 * AdaptiveDirectionalSampling
 * KarhunenLoeveQuadratureFactory
 * SobolIndicesAlgorithm
 * SaltelliSensitivityAlgorithm
 * MartinezSensitivityAlgorithm
 * JansenSensitivityAlgorithm
 * MauntzKucherenkoSensitivityAlgorithm
 * SoizeGhanemFactory
 * LevelSetMesher
 * HistogramPolynomialFactory
 * ChebychevFactory
 * FourierSeriesFactory, HaarWaveletFactory
 * OrthogonalProductFunctionFactory

==== API changes ====
 * Removed deprecated (AbdoRackwitz|Cobyla|SQP|TNC)SpecificParameters classes
 * Removed AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 * Removed deprecated OptimizationSolver::setMaximumIterationsNumber
 * Removed deprecated method Distribution::setParametersCollection(NP)
 * Removed deprecated PersistentFactory string constructor
 * Deprecated QuadraticCumul class in favor of TaylorExpansionMoments
 * Renamed __contains__ to contains
 * Modified NumericalMathFunction::[sg]etParameter to operate on NumericalPoint instead NumericalPointWithDescription
 * Add NumericalMathFunction::[sg]etParameterDescription to access the parameter description
 * Deprecated classes UserDefinedPair, HistogramPair
 * Removed SensitivityAnalysis class